# bol-scraping-empire

./: .gitignore  Cargo.toml  Makefile  flake.nix  todo.md
.github/workflows/: cd.yaml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs  versioning.rs
crates/scraper/: Cargo.toml
crates/scraper/src/: lib.rs  main.rs  status.rs
crates/scraper/src/api/: mod.rs
crates/scraper/src/providers/: bol.rs
crates/scraping/: Cargo.toml
crates/scraping/src/: status.rs
crates/scraping/src/providers/: amazon.rs  bol.rs  mod.rs
crates/uploader/: Cargo.toml
crates/uploader/src/api/: bol.rs  mod.rs
crates/uploader/src/bol/: mod.rs  types.rs
scripts/: release.sh  run.sh
src/: amazon.rs  lib.rs  main.rs  status.rs  versioning.rs
src/gui/: download.rs  mod.rs  query.rs
src/providers/: amazon.rs  bol.rs  mod.rs
