[package]
name = "bol-scraper-empire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
get_fields = "0.1.0"
lazy_static = "1.5.0"
parking_lot = "0.12.3"
regex = "1.11.1"
reqwest = "0.12.8"
rust_xlsxwriter = "0.79.0"
scraper = "0.20.0"
tokio = { version = "1", features = ["full"] }
