[package]
name = "bol-scraper-empire"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = "0.12.8"
rfd = "0.15.0"
rust_xlsxwriter = "0.79.0"
scraper = "0.20.0"
tokio = { version = "1", features = ["full"] }
