[package]
name = "cli"
version = "0.3.6"
edition = "2021"
repository = "https://github.com/juliamertz/bol-scraping-empire"

[dependencies]
scraping = { path = "../scraping" }
uploader = { path = "../uploader" }

clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.91"
rfd = "0.15.0"
rust_xlsxwriter = "0.79.0"
tokio = { version = "1", features = ["full"] }
crossterm = "0.28.1"

reqwest = { version = "0.12.8", optional = true }
bytes = { version = "1.8.0", optional = true }
serde = { version = "1.0.214", features = ["derive"], optional = true }
serde_json = { version = "1.0.132", optional = true }
lazy_static = { version = "1.5.0", optional = true }
toml = "0.8.19"

[features]
default = ["updater"]
updater = ["dep:bytes", "dep:serde", "dep:serde_json", "dep:reqwest", "dep:lazy_static"]
