[package]
name = "scraper"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/juliamertz/bol-scraping-empire"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = "0.12.8"
rfd = "0.15.0"
rust_xlsxwriter = "0.79.0"
scraper = "0.20.0"
tokio = { version = "1", features = ["full"] }
bytes = { version = "1.8.0", optional = true }
serde = { version = "1.0.214", features = ["derive"], optional = true }
serde_json = { version = "1.0.132", optional = true }
crossterm = "0.28.1"

[features]
default = ["updater"]
updater = ["dep:bytes", "dep:serde", "dep:serde_json"]
