[package]
name = "uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
lazy_static = "1.5.0"
reqwest = "0.12.8"
rust_xlsxwriter = "0.79.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132" }
base64 = "0.22.1"
